[package]
name = "bevy_replicon_quinnet"
version = "0.14.0"
description = "Integration with bevy_quinnet for bevy_replicon"
repository = "https://github.com/Henauxg/bevy_quinnet"
documentation = "https://docs.rs/bevy_replicon_quinnet"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["gamedev", "networking", "quic", "bevy", "plugin"]
categories = ["game-development", "network-programming"]
readme = "README.md"
exclude = ["assets/"]

[dependencies]
bevy_replicon = { version = "0.35", default-features = false }
bevy_quinnet = { path = "../bevy_quinnet", version = "0.18.0", default-features = false }
bevy = { version = "0.16", default-features = false, features = ["bevy_log"] }

[features]
default = ["client", "server", "shared-client-id"]

# Enables client features
client = ["bevy_replicon/client", "bevy_quinnet/client"]
# Enables server features
server = ["bevy_replicon/server", "bevy_quinnet/server"]

# Re-exports bevy_quinnet features
shared-client-id = ["bevy_quinnet/shared-client-id"]

[dev-dependencies]
bevy = { version = "0.16", default-features = false, features = [
    "bevy_gizmos",
    "bevy_state",
    "bevy_text",
    "bevy_ui_picking_backend",
    "bevy_ui",
    "bevy_window",
    "default_font",
    "serialize",
    "x11",
] }
clap = { version = "4.1", features = ["derive"] }
fastrand = "2.3"
fastrand-contrib = "0.1"
serde = "1.0"

[[example]]
name = "deterministic_boids"
path = "examples/deterministic_boids.rs"

[[example]]
name = "tic_tac_toe"
path = "examples/tic_tac_toe.rs"

[[test]]
name = "transport"
